plugins {
    id 'java'
}

repositories {
    maven {
        url = 'https://repo.runelite.net'
        content {
            includeGroupByRegex('net\\.runelite.*')
        }
    }
    mavenCentral()
}

def runeLiteVersion = '1.12.39'
def pluginMainClass = 'com.dashery.flippingtables.FlippingTablesPluginTest'

configurations {
    launcherRuntime
}

dependencies {
    compileOnly group: 'net.runelite', name: 'client', version: runeLiteVersion

    compileOnly 'org.projectlombok:lombok:1.18.36'
    annotationProcessor 'org.projectlombok:lombok:1.18.36'

    launcherRuntime group: 'net.runelite', name: 'client', version: runeLiteVersion
    launcherRuntime group: 'net.runelite', name: 'jshell', version: runeLiteVersion

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:4.11.0'
    testImplementation group: 'net.runelite', name: 'client', version: runeLiteVersion
    testImplementation group: 'net.runelite', name: 'jshell', version: runeLiteVersion
}

group = 'com.dashery.flippingtables'
version = '2.1.1'

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release.set(11)
}

tasks.register('run', JavaExec) {
    classpath = files(sourceSets.main.output, sourceSets.test.output, configurations.launcherRuntime)
    mainClass = pluginMainClass

    jvmArgs '-ea'
    args '--developer-mode', '--debug'
}

tasks.register('panelPreview', JavaExec) {
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.dashery.flippingtables.PanelPreview'
    args layout.buildDirectory.dir('panel-preview').get().asFile.absolutePath
}

tasks.register('shadowJar', Jar) {
    dependsOn configurations.launcherRuntime

    manifest {
        attributes('Main-Class': pluginMainClass, 'Multi-Release': true)
    }

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from sourceSets.main.output
    from(sourceSets.test.output) {
        include 'com/dashery/flippingtables/FlippingTablesPluginTest.class'
    }
    from {
        configurations.launcherRuntime.collect { file ->
            file.isDirectory() ? file : zipTree(file)
        }
    }

    exclude 'META-INF/INDEX.LIST'
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
    exclude '**/module-info.class'

    group = BasePlugin.BUILD_GROUP
    archiveClassifier.set('shadow')
    archiveFileName.set("flippingtables-${project.version}-all.jar")
}
